# HelloDirectX

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Examples2Sheet.props  ExamplesSheet.props  HelloDirectX.sln  HelloDx.sln  PropertySheet.props  README.md  appveyor.yml  vs_15_2017_Win64-nmake.bat  vs_15_2017_Win64.bat
2DRender/: 2DRender.vcxproj  2DRender.vcxproj.filters  Bitmap.cpp  Bitmap.h  D3D.cpp  D3D.h  Graphics.cpp  Graphics.h  Model.cpp  Model.h  Shader.h  Texture.h  main.cpp
Audio/: Audio.vcxproj  Audio.vcxproj.filters
Audio/Src/: TriangleRender.cpp  TriangleRender.h  main.cpp
CMakeModules/: FindGTestSrc.cmake
DrawText/: DrawText.vcxproj  DrawText.vcxproj.filters
DrawText/Assets/: GenFont.ps1  TaoFont-Strikeout.spritefont  TaoFont-Underline.spritefont
DrawText/Src/: TextRender.cpp  TextRender.h  main.cpp
FontEngine/: D3D.cpp  D3D.h  Font.cpp  Font.h  FontEngine.vcxproj  FontEngine.vcxproj.filters  FontShader.cpp  FontShader.h  Graphics.cpp  Graphics.h  Text.cpp  Text.h
FontEngine/Assets/: fontP.hlsl  fontV.hlsl
Grid/: Grid.vcxproj  Grid.vcxproj.filters
Grid/Src/: GridRender.cpp  GridRender.h  main.cpp
HelloDx/: CMakeLists.txt  Camera.cpp  Camera.h  ColorShader.cpp  ColorShader.h  Common.h  D3D.cpp  D3D.h  D3DHeader.h  Graphics.cpp  Graphics.h  HelloDX.vcxproj  HelloDX.vcxproj.filters  HelloDx.vcxproj  HelloDx.vcxproj.filters  Input.cpp  Input.h  Light.cpp  Light.h  Model.cpp  Model.h  Render.cpp  Render.h  Shader.cpp  Shader.h  System.cpp  System.h  Texture.cpp  Texture.h  TextureShader.cpp  TextureShader.h  WICTextureLoader.cpp  WICTextureLoader.h  main.cpp  pixel.shader  shaders.shader
HelloDx/Assets/: cube.txt
HelloDx/Core/: Input.h  System.cpp
HelloDx/TaoMath/: Vector.cpp  Vector.h
MouseAudio/: MouseAudio.vcxproj  MouseAudio.vcxproj.filters
MouseAudio/Base/: Application.cpp  Application.h  Common.h  DXResources.cpp  DXResources.h  IRender.h  IWindow.h  MainWindow.cpp  MainWindow.h
MouseAudio/Core/: TriangleRender.cpp  TriangleRender.h  main.cpp
MouseKeyboard/: MouseKeyboard.vcxproj  MouseKeyboard.vcxproj.filters
MouseKeyboard/Core/: main.cpp
MouseKeyboard/Src/: TriangleRender.cpp  TriangleRender.h  main.cpp
ObjConvert/: CMakeLists.txt  ObjConvert.vcxproj  ObjConvert.vcxproj.filters  common.h  main.cpp
Res/: lightP.shader  pixel.shader
Tao3DCommon/: Tao3DCommon.h  Tao3DCommon.vcxproj  Tao3DCommon.vcxproj.filters  Tao3DGlobal.h  stdafx.h
Tao3DCommon/Common/: Common.h
Tao3DCommon/Implement/: Camera.cpp  Camera.h  Input.cpp  Input.h  System.cpp  System.h
Tao3DCommon/Interface/: IGraphics.h  IInput.h  ISystem.h
Tao3DCore/: Application.cpp  Application.h  Common.h  DXResources.cpp  DXResources.h  IDeviceNotify.h  IRender.h  IWindow.h  MainWindow.cpp  MainWindow.h
TaoMath/: CMakeLists.txt  Common.hpp  Global.h  Matrix4x4.cpp  Matrix4x4.hpp  MatrixGeneric.hpp  Point.cpp  Point.hpp  PointF.cpp  PointF.hpp  Quaternion.cpp  Quaternion.hpp  TaoMath  TaoMath.cpp  TaoMathFwd  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp  Vector4D.cpp  Vector4D.hpp
Texture/: Texture.vcxproj  Texture.vcxproj.filters
Texture/Assets/: convert.ps1
Texture/Src/: AnimatedTexture.h  ScrollingBackground.h  TextureRender.cpp  TextureRender.h  main.cpp
Triangle/: Triangle.vcxproj  Triangle.vcxproj.filters
Triangle/Src/: TriangleRender.cpp  TriangleRender.h  main.cpp
run/: cubecube.txt  lightP.shader  lightV.shader  vertex.shader
test/: CMakeLists.txt
test/gtests/: CMakeLists.txt
test/gtests/testTaoMath/: CMakeLists.txt  main.cpp  test_common.cpp  test_matrix4x4.cpp  test_matrixGeneric.cpp  test_point.cpp  test_pointF.cpp  test_quaternion.cpp  test_vector2d.cpp  test_vector3d.cpp  test_vector4d.cpp
