#find GTest lib
find_package(GTest)
if (GTEST_FOUND)
    if (WIN32 AND (NOT CYGWIN) AND (NOT MINGW))
        set(gtest_disable_pthreads ON)
        set(gtest_force_shared_crt ON)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_DEBUG} /MD")
    endif()
    include_directories(SYSTEM ${GTEST_INCLUDE_DIRS})
    add_subdirectory(gtests)
else()
    # find GTest Source
    find_package(GTestSrc)
    if (GTESTSRC_FOUND)
        if (WIN32 AND (NOT CYGWIN) AND (NOT MINGW))
            set(gtest_disable_pthreads ON)
            set(gtest_force_shared_crt ON)
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
            set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
            set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_DEBUG} /MD")
        endif()
        add_subdirectory(${GTEST_SOURCE_DIR} ${CMAKE_BINARY_DIR}/googletest)
        include_directories(SYSTEM ${GTEST_INCLUDE_DIR})
        set(GTEST_BOTH_LIBRARIES gtest gtest_main)
        add_subdirectory(gtests)
    endif()
endif()