aux_source_directory(. arg)
get_filename_component(basename ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB_RECURSE CURRENT_HEADERS  *.h *.hpp)
add_executable(${basename} ${arg} ${CURRENT_HEADERS})
set_target_properties(${basename} PROPERTIES FOLDER GoogleTest)
target_link_libraries(${basename} TaoMath ${GTEST_BOTH_LIBRARIES})
add_test(NAME ${basename} COMMAND ${basename})